# c-cpp-preparatory-course

./: .gitignore  .gitmodules
homework1/: CMakeLists.txt  file2.txt  file3.txt  main.c  run.sh
homework3/: BinarySearchTree.c  BinarySearchTree.h  CMakeLists.txt  file.txt  main.c
homework4/: CMakeLists.txt  Element.cpp  Element.h  List.cpp  List.h  file.txt  main.cpp
homework5/: Auto.cpp  Auto.h  CMakeLists.txt  RandomValues.cpp  RandomValues.h  main.cpp
homework6/: CMakeLists.txt  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  VolumeFigure.cpp  VolumeFigure.h  main.cpp
homework8/: CMakeLists.txt  Words.cpp  Words.hpp  main.cpp
